[package]
name = "kakuri"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
nix = { version = "0.30.1", features = ["sched", "mount", "user", "net", "fs", "signal", "hostname", "process", "resource"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.9.2"
